# routes/api/quiz.js
@@ -65,39 +65,44 @@ router.post("/answers", async (req, res) => {
 
   try {
     const input = req.body;
-    // const input=req.body.map(question => question.options.map(option=> option.selected));
-    const symptoms = [1,1,1,1,1,1,1,1,1,1,1,1,01,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,
-    ];
+    let symptoms=[];
+    input[1].questions.map(question => question.options.map(option=> {
+      option.selected ? symptoms.push(1) : symptoms.push(0);
+    }));
+    input[2].questions.map(question => question.options.map(option=> {
+      option.selected ? symptoms.push(1) : symptoms.push(0);
+    }));
+    // const symptoms = [1,1,1,1,1,1,1,1,1,1,1,1,01,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1];
     const conclusions = evaluateQuizResult(symptoms);
 
-    const { gender, age, weight, height, activity, weightChange } = input;
-
-    let bmr = 10 * weight + 6.25 * height - 5 * age;
-    if (gender === 1) bmr += 5;
+    // const { gender, activity, age, height, weight, desiredWeight } = input[0];
+    
+    let bmr = 10 * input[0].questions[4] + 6.25 * input[0].questions[3] - 5 * input[0].questions[2];
+    if (input[0].questions[0] === "Male") bmr += 5;
     else bmr -= 161;
 
     let tdee;
 
-    if (activity === 1) tdee = 1.2 * bmr;
+    if (input[0].questions[1] === 1) tdee = 1.2 * bmr;
     // Sedentary/Couch Potato
-    else if (activity === 2) tdee = 1.375 * bmr;
+    else if (input[0].questions[1] === 2) tdee = 1.375 * bmr;
     // Light Exercise/Somewhat Active
-    else if (activity === 3) tdee = 1.55 * bmr;
+    else if (input[0].questions[1] === 3) tdee = 1.55 * bmr;
     // Moderate Exercise/Average Activity
-    else if (activity === 4) tdee = 1.725 * bmr;
+    else if (input[0].questions[1] === 4) tdee = 1.725 * bmr;
     // Active Individuals/Very Active
-    else if (activity === 5) tdee = 1.9 * bmr; // Extremely Active Individuals/Extremely Active
+    else if (input[0].questions[1] === 5) tdee = 1.9 * bmr; // Extremely Active Individuals/Extremely Active
 
     let calorie;
 
-    if (weightChange === 1) calorie = tdee + 250;
-    else if (weightChange === -1) calorie = tdee - 500;
-    else if (weightChange === 0) calorie = tdee;
+    if (input[0].questions[5] === 1) calorie = tdee + 250;
+    else if (input[0].questions[5] === -1) calorie = tdee - 500;
+    else if (input[0].questions[5] === 0) calorie = tdee;
 
     const result = [conclusions, calorie];
 
     console.log(conclusions);
-    res.status(404).json(result);
+    res.status(200).json(result);
   } catch (err) {
     console.error(err.message);
     return res.status(500).send("Server Error");
